--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+# Server/node_modules
 dist
 dist-ssr
 *.local
@@ -22,3 +23,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# # /node_modules
+# ./BACKEND
+# ./TEST@BACKENDFOLDER
+# ./TestBCKND
